delete bullshit mapper